--- a/static/light.css
+++ b/static/light.css
@@ -5,7 +5,8 @@ body {
   color: #282c37;
   font-weight: lighter;
   overflow-x: hidden;
-  font-size: 100%; }
+  font-size: 100%;
+  word-break: break-word; }
 
 * {
   margin: 0;
@@ -127,7 +128,8 @@ a * {
   color: #282c37;
   font-weight: 400;
   cursor: pointer;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  user-select: none; }
 
 label.button {
   padding: 0.25rem 0.5rem;
