--- a/stylesrc/base.scss
+++ b/stylesrc/base.scss
@@ -13,6 +13,7 @@ body {
   font-weight: lighter;
   overflow-x:hidden;
   font-size:100%;
+  word-break: break-word;
 }
 
 * {
